Veiwing changes commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-I am Rajiv Jha, Founder , GGSIPU-LUG. Hey I am modifing you.
+I am Rajiv Jha, Founder , GGSIPU-LUG. Hey I am modifing you.Rajiv is best person ever.
